<resources>
    <string name="app_name">Busik</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="login">Вход</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="phone_number">Номер телефона</string>
    <string name="registration">Регистрация</string>
    <string name="setting">Настройки</string>
    <string name="rating">Рейтинг</string>
    <string name="now_pass">Текущий пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="confirm_new_pass">Подтверждение нового пароля</string>
    <string name="save">Сохранить</string>
    <string name="add_flights">Добавить рейс</string>
    <string name="flights">Рейсы</string>
    <string name="add_data">Введите данные для авторизации</string>
    <string name="registr_or_login">Зарегистрируйтесь или войдите в приложение</string>
    <string name="registr_user">Регистрация пользователя</string>
    <string name="confirm_pass">Подтверждения пароля</string>
    <string name="list_flight">Список перевозчиков</string>
    <string name="massage_from_driver">Сообщения от водителей</string>
    <string name="reviews">Отзывы</string>
    <string name="exit">Выход</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="min_pasag">Мин Є/пасажир</string>
    <string name="max_pasag">Макс Є/пасажир</string>
    <string name="min_kg">Мин Є/кг</string>
    <string name="max_kg">Макс Є/кг</string>
    <string name="from_country">из(Страна)</string>
    <string name="in_country">В(Страна)</string>
    <string name="from_city">из (Город)</string>
    <string name="in_city">в(Город)</string>
    <string name="date_send_from">дата отправления от</string>
    <string name="date_send_before">дата отправления до</string>
    <string name="date_arrival_from">дата прибытия от</string>
    <string name="date_arrival_before">дата прибытия до</string>
    <string name="carrier">Перевозчик</string>
    <string name="sender">Отправитель</string>
    <string name="massage">Сообщения</string>
    <string name="upcoming_flights">Предстоящие рейсы</string>
    <string name="search_flight">Поиск рейса</string>
    <string name="my_package">Мои рейсы</string>
    <string name="profile">Профиль</string>
    <string name="change_description">Изменение описания</string>
    <string name="description">Описание</string>
    <string name="massage_for_passag">Сообщение пассажирам</string>
    <string name="last_massage">Последние сообщения:</string>
    <string name="enter_text_massage">Введите текст сообщения</string>
    <string name="send">Отправить</string>
    <string name="poloski">-- </string>
    <string name="departure">-- Отправление :</string>
    <string name="Arrival">-- Прибытие :</string>
    <string name="status">-- Статус :</string>
    <string name="details">Подробности :</string>
    <string name="some_text">На вашу почту будет отправлено письмо с сылкой на востановление пароля</string>
    <string name="add">Добавить</string>
    <string name="accept">Принять</string>
    <string name="clear">Очистить</string>
    <string name="create_flight">Создание рейса</string>
    <string name="where_from_country">Откуда(страна)</string>
    <string name="where_country">Куда(страна)</string>
    <string name="where_from_city">Откуда(город)</string>
    <string name="where_city">Куда(город)</string>
    <string name="price_kg">Цена за кг груза ($)</string>
    <string name="price_passenger">Цена за пасажира</string>
    <string name="start_date">Дата начала поездки</string>
    <string name="finish_date">Дата конца поездки</string>
    <string name="comments">Подробности/Комментарий</string>
    <string name="create">Создать</string>
    <string name="menu">menu</string>
    <string name="your_rating">Ваш рейтинг -</string>
    <string name="cancel">Отменить</string>
    <string name="information">Информация</string>
    <string name="passenger">Пассажиры</string>
    <string name="register_user_such_as">Зарегистрирувать пользователя как:</string>


</resources>