<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            app:tint="@color/black"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/styleTextView"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:text="@string/setting"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/surname">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/country">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/city">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:prefixText=" + "
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:hintAnimationEnabled="true"
        android:hint="@string/phone_number">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/e_mail">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true"
                android:hint="@string/password">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:hint="@string/rating">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Изменить пароль"
        style="@style/styleButton"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp"/>


    <Button
        style="@style/styleButton"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:text="@string/save"
        android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>